--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,15 +1,11 @@
 name: Collab
 
-on:
-  push:
-    branches: [ main ]
-  pull_request:
-    types: [ opened, synchronize, reopened ]
-    branches: [ main ]
+on: push
 
 env:
   CARGO_TERM_COLOR: always
   RUST_TOOLCHAIN: "1.65"
+  ROCKSDB_LIB_DIR: "/usr/lib"
 
 jobs:
   fmt:
@@ -28,6 +24,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+
       - uses: dtolnay/rust-toolchain@stable
         with:
           toolchain: ${{ env.RUST_TOOLCHAIN }}
@@ -39,7 +36,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - name: Install dependencies
+        run: sudo apt update && sudo apt install -y librocksdb-dev
       - uses: dtolnay/rust-toolchain@stable
       - name: Run tests
         run: cargo test
-
